security_groups.tf
resource "aws_security_group" "asg_sg" {
  name        = "coalfire-asg-sg"
  description = "Allow inbound traffic to the application"
  vpc_id      = module.vpc_nfw.vpc_id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "lb_sg" {
  name        = "coalfire-lb-sg"
  description = "Allow HTTP traffic to the load balancer"
  vpc_id      = module.vpc_nfw.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
